--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,13 +3,13 @@ plugins {
 }
 
 android {
-    namespace 'de.androidcrypto.desfiretutorial'
-    compileSdk 33
+    namespace 'de.androidcrypto.desfirechangemasterappkey'
+    compileSdk 34
 
     defaultConfig {
-        applicationId "de.androidcrypto.desfiretutorial"
+        applicationId "de.androidcrypto.desfirechangemasterappkey"
         minSdk 21
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -30,8 +30,8 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
